Fixing code in notebook as per reported errors
Multiple Github issues logged against the tutorial which features this notebook reveal an issue in the ordering of these code blocks. Changing the install block to occur before the declaration of variables addresses the bug. Without doing this, the second to last code block doesn't recognize the "storage_account" variable. Also, the uninstall step causes a blocking error that prevents the rest of the notebook from running. Based on an issue that was logged to this repo, it looks like another contributor found a workaround of using "!" instead of "?". I included that workaround in this commit.

--- a/src/ReportAnalysis.ipynb
+++ b/src/ReportAnalysis.ipynb
@@ -37,14 +37,10 @@
       },
       "outputs": [],
       "source": [
-        "# set the details of account and container where BlobInventoryStorageAccountConfiguration.json file is stored and the storage account \n",
-        "# is connected to synapse workspace\n",
-        "storage_account = \"DataLakeStorageGen2Account\"\n",
-        "container_name = \"DataLakeStorageGen2Container\"\n",
-        "file_name = \"BlobInventoryStorageAccountConfiguration\"\n",
-        "\n",
-        "# name of the database in which tables will be stored\n",
-        "database_name = \"reportdata\""
+        "# uninstalling current version as BlobService is disabled in current version\n",
+        "!pip uninstall azure-storage-blob --yes\n",
+        "# installing previous version as BlobService is available in this version\n",
+        "!pip install azure-storage-blob==2.1.0"
       ]
     },
     {
@@ -63,10 +59,14 @@
       },
       "outputs": [],
       "source": [
-        "# uninstalling current version as BlobService is disabled in current version\n",
-        "%pip uninstall azure-storage-blob --yes\n",
-        "# installing previous version as BlobService is available in this version\n",
-        "%pip install azure-storage-blob==2.1.0"
+        "# set the details of account and container where BlobInventoryStorageAccountConfiguration.json file is stored and the storage account \n",
+        "# is connected to synapse workspace\n",
+        "storage_account = \"DataLakeStorageGen2Account\"\n",
+        "container_name = \"DataLakeStorageGen2Container\"\n",
+        "file_name = \"BlobInventoryStorageAccountConfiguration\"\n",
+        "\n",
+        "# name of the database in which tables will be stored\n",
+        "database_name = \"reportdata\""
       ]
     },
     {
