fixed BlockBlobService import error

--- a/src/ReportAnalysis.ipynb
+++ b/src/ReportAnalysis.ipynb
@@ -93,7 +93,7 @@
         "from pyspark.sql.functions import substring_index\n",
         "from pyspark.sql.functions import lit\n",
         "from pyspark.sql.functions import col\n",
-        "from azure.storage.blob import BlockBlobService\n",
+        "from azure.storage.blob import BlobServiceClient\n",
         "import datetime\n",
         "import sys"
       ]
@@ -439,13 +439,16 @@
       "source": [
         "# returns all the json file links to the respective inventory reports (by providing the destination container and the rule name along with storage account credentials)\n",
         "def get_json_link_of_reports(storage_account_name, access_key, destination_container, rule_name):\n",
-        "    blob_service = BlockBlobService(storage_account_name, access_key)\n",
-        "    # list the relative path to all the blobs present in the destination container\n",
+        "    # Create a BlobServiceClient object using the account name and access key\n",
+        "    blob_service_client = BlobServiceClient(account_url=f\"https://{storage_account_name}.blob.core.windows.net\", credential=access_key)\n",
         "    try:\n",
-        "        blob_list = blob_service.list_blobs(destination_container)\n",
+        "        # Access a container\n",
+        "        container_client = blob_service_client.get_container_client(destination_container)\n",
         "    except Exception as e:\n",
         "        print(\"Error: Container does not exist\", e)\n",
         "        return\n",
+        "    # List blobs in the container\n",
+        "    blob_list = container_client.list_blobs()\n",
         "    # storing the links to all the blob inventory reports\n",
         "    links_list = []\n",
         "    # iterating over the returned list of relative path to blobs\n",
